# so_arm101_ros2

./: LICENSE  README.md
so101_bringup/: CMakeLists.txt  package.xml
so101_bringup/config/: ros2_controllers.yaml
so101_bringup/launch/: gazebo.launch.py
so101_bringup/worlds/: empty.sdf
so101_description/: CMakeLists.txt  package.xml
so101_description/launch/: view.launch.py
so101_description/rviz/: display.rviz
so101_description/urdf/: so101.gazebo.xacro  so101.macro.xacro  so101.ros2_control.xacro  so101.transmission.xacro  so101.urdf  so101.urdf.xacro
so101_moveit_config/: .setup_assistant  package.xml
so101_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  so101.srdf  so101.urdf.xacro
so101_moveit_config/launch/: demo.launch.py  move_group.launch.py
